--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bruno Barbaran | Portafolio</title>
-    <meta name="description" content="Soy Bruno Barbaran, desarrollador web con experiencia en frontend y backend, especializado en inteligencia artificial y desarrollo web. Conoce mis proyectos y habilidades en mi portafolio.">
-    <meta name="keywords" content="Bruno Barbaran, portafolio, desarrollador web, frontend, backend, inteligencia artificial, proyectos, habilidades, React, Node JS, Python, JavaScript, HTML, CSS">
+    <title>Portafolio | Bruno Paolo Barbaran Quiroz</title>
+    <meta name="description" content="Soy Bruno Paolo Barbaran Quiroz, desarrollador web con experiencia en frontend y backend, especializado en inteligencia artificial y desarrollo web. Conoce mis proyectos y habilidades en mi portafolio.">
+    <meta name="keywords" content="Bruno Paolo Barbaran Quiroz, portafolio, desarrollador web, frontend, backend, inteligencia artificial, proyectos, habilidades, React, Node JS, Python, JavaScript, HTML, CSS">
 
     <meta property="og:title" content="Bruno Barbaran | Portafolio">
-    <meta property="og:description" content="Soy Bruno Barbaran, desarrollador web con experiencia en frontend y backend, especializado en inteligencia artificial y desarrollo web. Conoce mis proyectos y habilidades en mi portafolio.">
+    <meta property="og:description" content="Soy Bruno Paolo Barbaran Quiroz, desarrollador web con experiencia en frontend y backend, especializado en inteligencia artificial y desarrollo web. Conoce mis proyectos y habilidades en mi portafolio.">
     <meta property="og:type" content="website">
     <meta name="contact" content="brunobarbaran@hotmail.com, https://www.linkedin.com/in/bruno-paolo-barbaran-quiroz-606478195/, https://bruno-barbaran.web.app/, https://github.com/iBarb">
   </head>
